--- a/Metroid_1986/Metroid_1986.vcxproj.filters
+++ b/Metroid_1986/Metroid_1986.vcxproj.filters
@@ -16,24 +16,21 @@
     <Filter Include="Scene">
       <UniqueIdentifier>{bc4a2c00-1b36-4e75-9767-d5f53468d66c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Control">
+      <UniqueIdentifier>{890ee0f9-05c8-4200-9222-36af0179ea94}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Control\Graphics">
+      <UniqueIdentifier>{d09aaf2a-02f5-44be-890c-cfed0954fbf4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Object">
+      <UniqueIdentifier>{d5b8e075-a993-4244-b031-4d6afbbaf443}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Control\Support">
+      <UniqueIdentifier>{ef361cd4-62ae-47b1-8f08-2eec4640ccec}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WinMain.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Game.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Sprite.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Object.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Global Setting.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Font.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SceneMenu.cpp">
@@ -51,23 +48,26 @@
     <ClCompile Include="SceneGame.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>Control</Filter>
+    </ClCompile>
+    <ClCompile Include="Global Setting.cpp">
+      <Filter>Control</Filter>
+    </ClCompile>
+    <ClCompile Include="Texture.cpp">
+      <Filter>Control\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="Sprite.cpp">
+      <Filter>Control\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="Object.cpp">
+      <Filter>Object</Filter>
+    </ClCompile>
+    <ClCompile Include="Font.cpp">
+      <Filter>Control\Support</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Game.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Sprite.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Object.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Global Setting.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Font.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="SceneMenu.h">
       <Filter>Scene</Filter>
     </ClInclude>
@@ -82,6 +82,24 @@
     </ClInclude>
     <ClInclude Include="SceneEnd.h">
       <Filter>Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Global Setting.h">
+      <Filter>Control</Filter>
+    </ClInclude>
+    <ClInclude Include="Game.h">
+      <Filter>Control</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.h">
+      <Filter>Control\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Sprite.h">
+      <Filter>Control\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Object.h">
+      <Filter>Object</Filter>
+    </ClInclude>
+    <ClInclude Include="Font.h">
+      <Filter>Control\Support</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
