--- a/Metroid_1986/Metroid_1986.vcxproj
+++ b/Metroid_1986/Metroid_1986.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TextureCollection.cpp" />
+    <ClCompile Include="Texture2.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="TileGrid.cpp" />
     <ClCompile Include="WinMain.cpp" />
@@ -108,6 +109,7 @@
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TextureCollection.h" />
+    <ClInclude Include="Texture2.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="TileGrid.h" />
   </ItemGroup>
