--- a/Metroid_1986/Metroid_1986.vcxproj.filters
+++ b/Metroid_1986/Metroid_1986.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="Texture2.cpp">
       <Filter>Control\Graphics</Filter>
     </ClCompile>
+    <ClCompile Include="Animation.cpp">
+      <Filter>Control\Graphics</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SceneMenu.h">
@@ -165,6 +168,9 @@
       <Filter>Control\Support</Filter>
     </ClInclude>
     <ClInclude Include="Texture2.h">
+      <Filter>Control\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Animation.h">
       <Filter>Control\Graphics</Filter>
     </ClInclude>
   </ItemGroup>
