Handle collsion between Player with Ground (have error)

--- a/Metroid_1986/Metroid_1986.vcxproj
+++ b/Metroid_1986/Metroid_1986.vcxproj
@@ -73,10 +73,12 @@
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="BackgroundMap.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Global Setting.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Ground.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="QuadTree.cpp" />
     <ClCompile Include="Scene.cpp" />
@@ -85,7 +87,6 @@
     <ClCompile Include="SceneMain.cpp" />
     <ClCompile Include="SceneMenu.cpp" />
     <ClCompile Include="Sprite.cpp" />
-    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TextureCollection.cpp" />
     <ClCompile Include="Texture2.cpp" />
     <ClCompile Include="Tile.cpp" />
@@ -97,9 +98,11 @@
     <ClInclude Include="Animation.h" />
     <ClInclude Include="BackgroundMap.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Collision.h" />
     <ClInclude Include="Font.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Global Setting.h" />
+    <ClInclude Include="Ground.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="QuadTree.h" />
     <ClInclude Include="SceneEnd.h" />
@@ -109,7 +112,6 @@
     <ClInclude Include="SceneMain.h" />
     <ClInclude Include="SceneMenu.h" />
     <ClInclude Include="Sprite.h" />
-    <ClInclude Include="Texture.h" />
     <ClInclude Include="TextureCollection.h" />
     <ClInclude Include="Texture2.h" />
     <ClInclude Include="Tile.h" />
