--- a/Metroid_1986/Metroid_1986.vcxproj
+++ b/Metroid_1986/Metroid_1986.vcxproj
@@ -72,6 +72,7 @@
     <ClCompile Include="AABB.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="BackgroundMap.cpp" />
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Font.cpp" />
@@ -97,6 +98,7 @@
     <ClInclude Include="AABB.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="BackgroundMap.h" />
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="Font.h" />
