--- a/Metroid_1986/Metroid_1986.vcxproj
+++ b/Metroid_1986/Metroid_1986.vcxproj
@@ -80,6 +80,7 @@
     <ClCompile Include="Global Setting.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Ground.cpp" />
+    <ClCompile Include="Hedgehog.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="QuadTree.cpp" />
     <ClCompile Include="Scene.cpp" />
@@ -105,6 +106,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="Global Setting.h" />
     <ClInclude Include="Ground.h" />
+    <ClInclude Include="Hedgehog.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="QuadTree.h" />
     <ClInclude Include="SceneEnd.h" />
