--- a/Metroid_1986/Metroid_1986.vcxproj.filters
+++ b/Metroid_1986/Metroid_1986.vcxproj.filters
@@ -117,9 +117,6 @@
     <ClCompile Include="Bullet.cpp">
       <Filter>Object\Player</Filter>
     </ClCompile>
-    <ClCompile Include="Hedgehog.cpp">
-      <Filter>Object\Enemy</Filter>
-    </ClCompile>
     <ClCompile Include="UI.cpp">
       <Filter>Control</Filter>
     </ClCompile>
@@ -131,6 +128,12 @@
     </ClCompile>
     <ClCompile Include="MaruMari.cpp">
       <Filter>Object\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="Zoomer.cpp">
+      <Filter>Object\Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="Skree.cpp">
+      <Filter>Object\Enemy</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -203,9 +206,6 @@
     <ClInclude Include="Bullet.h">
       <Filter>Object\Player</Filter>
     </ClInclude>
-    <ClInclude Include="Hedgehog.h">
-      <Filter>Object\Enemy</Filter>
-    </ClInclude>
     <ClInclude Include="UI.h">
       <Filter>Control</Filter>
     </ClInclude>
@@ -217,6 +217,12 @@
     </ClInclude>
     <ClInclude Include="MaruMari.h">
       <Filter>Object\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="Zoomer.h">
+      <Filter>Object\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="Skree.h">
+      <Filter>Object\Enemy</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
