--- a/Metroid_1986/Metroid_1986.vcxproj
+++ b/Metroid_1986/Metroid_1986.vcxproj
@@ -88,6 +88,7 @@
     <ClCompile Include="Global Setting.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Ground.cpp" />
+    <ClCompile Include="HPTonic.cpp" />
     <ClCompile Include="Skree.cpp" />
     <ClCompile Include="Zoomer.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -119,6 +120,7 @@
     <ClInclude Include="Gate.h" />
     <ClInclude Include="Global Setting.h" />
     <ClInclude Include="Ground.h" />
+    <ClInclude Include="HPTonic.h" />
     <ClInclude Include="MaruMari.h" />
     <ClInclude Include="Skree.h" />
     <ClInclude Include="Zoomer.h" />
