--- a/Metroid_1986/Metroid_1986.vcxproj
+++ b/Metroid_1986/Metroid_1986.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Ground.cpp" />
     <ClCompile Include="HPTonic.cpp" />
+    <ClCompile Include="Ridley.cpp" />
     <ClCompile Include="Rio.cpp" />
     <ClCompile Include="Ripper.cpp" />
     <ClCompile Include="Skree.cpp" />
@@ -127,6 +128,7 @@
     <ClInclude Include="Ground.h" />
     <ClInclude Include="HPTonic.h" />
     <ClInclude Include="MaruMari.h" />
+    <ClInclude Include="Ridley.h" />
     <ClInclude Include="Rio.h" />
     <ClInclude Include="Ripper.h" />
     <ClInclude Include="Skree.h" />
